src/snapshots/ec2hx__lang@qemu.snap
---
source: src/lib.rs
expression: languages_toml
input_file: test_data/qemu
snapshot_kind: text
---
[[language]]
name = "bash"
indent = { unit = "    ", tab-width = 4 }

[[language]]
name = "c"
indent = { unit = "    ", tab-width = 4 }

[[language]]
name = "cpp"
indent = { unit = "    ", tab-width = 4 }

[[language]]
name = "ec2hx-unknown-lang-Makefile*"
scope = "text.plain"
file-types = [{ glob = "Makefile*" },]
indent = { unit = "\t", tab-width = 8 }

[[language]]
name = "ec2hx-unknown-lang-c.inc"
scope = "text.plain"
file-types = [{ glob = "*.c.inc" },]
indent = { unit = "    ", tab-width = 4 }

[[language]]
name = "ec2hx-unknown-lang-h.inc"
scope = "text.plain"
file-types = [{ glob = "*.h.inc" },]
indent = { unit = "    ", tab-width = 4 }

[[language]]
name = "gas"
indent = { unit = "\t", tab-width = 8 }

[[language]]
name = "make"
indent = { unit = "\t", tab-width = 8 }

[[language]]
name = "nasm"
indent = { unit = "\t", tab-width = 8 }
