src/snapshots/ec2hx__lang@typescript.snap
---
source: src/lib.rs
expression: languages_toml
input_file: test_data/typescript
snapshot_kind: text
---
[[language]]
name = "ec2hx-glob-lang-scripts/**.js"
scope = "source.js"
language-id = "javascript"
file-types = [{ glob = "scripts/**.js" }]
shebangs = ["node"]
roots = [ "package.json" ]
comment-token = "//"
block-comment-tokens = { start = "/*", end = "*/" }
language-servers = [ "typescript-language-server" ]
indent = { unit = "    ", tab-width = 4 }

[[language]]
name = "ec2hx-glob-lang-scripts/**.json"
scope = "source.json"
file-types = [{ glob = "scripts/**.json" }]
language-servers = [ "vscode-json-language-server" ]
auto-format = true
indent = { unit = "    ", tab-width = 4 }

[[language]]
name = "ec2hx-glob-lang-scripts/**.ts"
scope = "source.ts"
language-id = "typescript"
file-types = [{ glob = "scripts/**.ts" }]
shebangs = ["deno", "bun", "ts-node"]
roots = [ "package.json", "tsconfig.json" ]
comment-token = "//"
block-comment-tokens = { start = "/*", end = "*/" }
language-servers = [ "typescript-language-server" ]
indent = { unit = "    ", tab-width = 4 }

[[language]]
name = "ec2hx-unknown-lang-src/**."
scope = "text.plain"
file-types = [{ glob = "src/**." }]
indent = { unit = "    ", tab-width = 4 }
formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
auto-format = true
